<resources>
    <string name="app_name">GhostRunner</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_runners">Runners</string>
    <string name="nav_profile">Profile</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_out">SignOut</string>
    <string name="add_trail">Add Trail</string>
    <string name="weightText">Weight(kg)</string>
    <string name="heightText">Height(cm)</string>
    <string name="caloriesText">Goal of calories(kcal)</string>
    <string name="weightEdit">70</string>
    <string name="heightEdit">176</string>
    <string name="caloriesEdit">500</string>
    <string name="letsGobut">Let\'s Go!</string>
    <string name="title_activity_maps">Map</string>
    <string name="mytrails">My Trails</string>
    <string name="trailName">ex: The Montain Peak</string>
    <string name="trailLocation">ex: Aveiro</string>
    <string name="trailDescription">ex: Hard Trail</string>
    <string name="about">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="friendtrails">My trails</string>
    <string name="compare">Times comparation by friend</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
