<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19227E"
    tools:context=".ui.profile.ProfileFragment">

    <Button
        android:id="@+id/but_sign_out"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg_rounded_corners_stop"
        android:drawableLeft="@drawable/ic_power"
        android:onClick="onClick"
        android:paddingLeft="16.0dp"
        android:text="@string/sign_out"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userPic"
        android:layout_width="177dp"
        android:layout_height="152dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="mike"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPic" />

    <ImageButton
        android:id="@+id/changePhotoBut"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg_rounded_corners_add"
        android:onClick="onClick"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userPic"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qrCodeView"
        android:layout_width="194dp"
        android:layout_height="179dp"
        android:layout_marginBottom="32dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/but_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/galleryBut"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="onClick"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userPic"
        app:layout_constraintTop_toBottomOf="@+id/changePhotoBut" />

    <TextView
        android:id="@+id/profileWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/height"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/weight"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>